# web

./: .env.sample  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
src/: app.py
src/db/: db.py
src/routes/: api.py  notify.py
src/services/auth/: short_id.py  token.py
src/services/lineNotify/: auth.py  notify.py
src/services/users/: user.py
src/templates/: index.html
