[project]
name = "web"
version = "0.1.0"
description = "web with Flask"
authors = []
dependencies = [
    "flask~=2.3.2",
    "python-dotenv~=1.0.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true

[tool.hatch.metadata]
allow-direct-references = true
