[project]
name = "web"
version = "0.1.0"
description = "web with Flask"
authors = []
dependencies = [
    "flask~=2.3.2",
    "python-dotenv~=1.0.0",
    "requests~=2.31.0",
    "pymongo~=4.3.3",
    "oauthlib>=3.2.2",
    "flask_login>=0.6.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true

[tool.hatch.metadata]
allow-direct-references = true
